--- a/src/main/resources/com/example/memview/hello-view.fxml
+++ b/src/main/resources/com/example/memview/hello-view.fxml
@@ -8,21 +8,21 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane fx:id="root" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.memview.HelloController">
+<StackPane fx:id="root" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" onScroll="#scrollHandler" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.memview.HelloController">
    <children>
-      <ImageView fx:id="mainImageView" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
+      <ImageView fx:id="mainImageView" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
          <effect>
             <Blend />
          </effect></ImageView>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
+      <HBox alignment="CENTER" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
          <children>
-            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonAction" opacity="0.5" text="&lt;">
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonAction" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" opacity="0.5" text="&lt;">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
             </Button>
             <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonAction" onScroll="#nextButtonAction" opacity="0.5" text="&gt;">
+            <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonAction" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" onScroll="#nextButtonAction" opacity="0.5" text="&gt;">
                <HBox.margin>
                   <Insets right="10.0" />
                </HBox.margin>
