--- a/src/main/resources/com/example/memview/hello-view.fxml
+++ b/src/main/resources/com/example/memview/hello-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -10,6 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 
 <StackPane fx:id="root" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" onMouseClicked="#createZoomBoxOnClick" onScroll="#scrollHandler" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.memview.HelloController">
+   <ToolBar fx:id="galleryThumbnailParentToolbar" onMouseEntered="#setVisibleToolbar" onMouseExited="#setTransparentToolbar" opacity="0.0" prefHeight="40.0" prefWidth="200.0" StackPane.alignment="TOP_CENTER" />
    <Label fx:id="metadataLabel" alignment="TOP_LEFT" StackPane.alignment="TOP_LEFT">
       <padding>
          <Insets left="15.0" />
