--- a/src/main/resources/com/example/memview/photo-conversion.fxml
+++ b/src/main/resources/com/example/memview/photo-conversion.fxml
@@ -48,6 +48,8 @@
             <Button alignment="CENTER" mnemonicParsing="false" onAction="#openFileDirectoryToSpecifyOutputPath" prefHeight="25.0" prefWidth="165.0" text="Somewhere else" />
             <Label fx:id="chosenDirectoryLabel" alignment="CENTER" prefHeight="49.0" prefWidth="314.0" text="Chosen Directory" />
             <ChoiceBox fx:id="outputFileFormatChoiceBox" prefWidth="150.0" />
+            <CheckBox fx:id="toRotateCheckBox" mnemonicParsing="false" text="Rotate?" />
+            <TextField fx:id="rotationAmountTextField" promptText="Rotation amount" />
          </children>
       </VBox>
       </VBox>
