--- a/src/main/resources/com/example/memview/hello-view.fxml
+++ b/src/main/resources/com/example/memview/hello-view.fxml
@@ -34,14 +34,14 @@
          <Blend />
       </effect>
    </ImageView>
-   <HBox fx:id="buttonHolder" alignment="CENTER" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
-      <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonAction" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" opacity="0.5" text="&lt;">
+   <HBox alignment="CENTER" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
+      <Button mnemonicParsing="false" onAction="#backButtonAction" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" opacity="0.5" text="&lt;">
          <HBox.margin>
             <Insets left="10.0" />
          </HBox.margin>
       </Button>
       <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-      <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonAction" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" onScroll="#nextButtonAction" opacity="0.5" text="&gt;">
+      <Button mnemonicParsing="false" onAction="#nextButtonAction" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" onScroll="#nextButtonAction" opacity="0.5" text="&gt;">
          <HBox.margin>
             <Insets right="10.0" />
          </HBox.margin>
@@ -50,35 +50,25 @@
    <Pane fx:id="zoomBoxContainer" prefHeight="200.0" prefWidth="319.0">
             <ImageView fx:id="zoomBoxView" fitHeight="150.0" fitWidth="200.0" onMouseClicked="#createZoomBoxOnClick" onMouseDragged="#moveZoomBoxWithMouse" onMouseReleased="#hideZoomBoxOnRelease" pickOnBounds="true" preserveRatio="true" />
    </Pane>
-   <MenuBar styleClass="menu" StackPane.alignment="TOP_LEFT">
-     <menus>
+   <MenuBar fx:id="mainMenuBar" styleClass="menu" StackPane.alignment="TOP_LEFT">
        <Menu mnemonicParsing="false" text="Options">
-         <items>
                <Menu mnemonicParsing="false" text="EXIF">
-                 <items>
                      <CheckMenuItem fx:id="creationDateCheckMenu" mnemonicParsing="false" onAction="#toggleCreationDatePreferences" text="Show Creation Date" />
                      <CheckMenuItem fx:id="fileSizeCheckMenu" mnemonicParsing="false" onAction="#toggleFileSizePreferences" text="Show File Size" />
                      <CheckMenuItem fx:id="GPSCheckMenu" mnemonicParsing="false" onAction="#toggleGPSExifPreferences" text="Show GPS Info" />
-                 </items>
                </Menu>
-         </items>
        </Menu>
        <Menu mnemonicParsing="false" text="Convert">
-         <items>
            <MenuItem mnemonicParsing="false" onAction="#showConversionPopup" text="Photo Conversion" />
-         </items>
        </Menu>
        <Menu mnemonicParsing="false" text="Help">
-         <items>
            <MenuItem mnemonicParsing="false" text="About" />
-         </items>
        </Menu>
-     </menus>
       <StackPane.margin>
-         <Insets top="-10.0" />
+         <Insets left="-10.0" right="-10.0" top="-10.0" />
       </StackPane.margin>
       <padding>
-         <Insets bottom="10.0" />
+         <Insets bottom="5.0" left="10.0" top="5.0" />
       </padding>
    </MenuBar>
 </StackPane>
