--- a/src/main/resources/com/example/memview/photo-conversion.fxml
+++ b/src/main/resources/com/example/memview/photo-conversion.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="497.0" prefWidth="711.0" styleClass="root" stylesheets="src/main/resources/image.Resources/styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.memview.PhotoConversionController">
+<AnchorPane prefHeight="497.0" prefWidth="711.0" styleClass="root" stylesheets="image.Resources/styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.memview.PhotoConversionController">
       <VBox layoutX="14.0" layoutY="23.0" prefHeight="434.0" prefWidth="241.0">
             <Label alignment="CENTER" prefHeight="25.0" prefWidth="241.0" text="List of files">
                <font>
@@ -37,9 +37,6 @@
             <Label fx:id="scalingLabel" text="Scaling Factor:" />
             <Slider fx:id="scalingFactorSlider" blockIncrement="0.25" majorTickUnit="1.0" max="5.0" min="0.25" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
                   </VBox>
-            </HBox>
-            <HBox prefHeight="60.0" prefWidth="100.0">
-                  <CheckBox fx:id="keepAspectRatioCheckBox" mnemonicParsing="false" prefHeight="34.0" prefWidth="100.0" text="Keep Aspect Ratio" />
             </HBox>
       <VBox prefHeight="293.0" prefWidth="321.0">
          <children>
