--- a/src/main/resources/main/controllers/photo-conversion.fxml
+++ b/src/main/resources/main/controllers/photo-conversion.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane styleClass="root" stylesheets="@../../../image.Resources/styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.memview.PhotoConversionController">
+<AnchorPane styleClass="root" stylesheets="@../../../image.Resources/styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.PhotoConversionController">
       <VBox layoutX="14.0" layoutY="23.0" prefHeight="596.0" prefWidth="241.0">
             <Label alignment="CENTER" prefHeight="25.0" prefWidth="241.0" text="List of files">
                <font>
@@ -40,7 +40,6 @@
             </padding>
             </VBox>
          <VBox>
-            <children>
                   <CheckBox fx:id="toResizeCheckBox" mnemonicParsing="false" onAction="#setResizeNodesToggle" text="Resize?" />
                         <Label fx:id="resizeLabel" alignment="CENTER" prefHeight="25.0" prefWidth="100.0" text="Resize" />
                         <HBox prefHeight="100.0" prefWidth="200.0">
@@ -54,7 +53,6 @@
                         <Slider fx:id="scalingFactorSlider" blockIncrement="0.25" majorTickUnit="1.0" max="5.0" min="0.25" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
                               </VBox>
                         </HBox>
-            </children>
             <padding>
                <Insets bottom="20.0" top="20.0" />
             </padding>
@@ -65,10 +63,8 @@
          </styleClass>
       </VBox>
       <VBox>
-         <children>
                <CheckBox fx:id="toRotateCheckBox" mnemonicParsing="false" onAction="#setRotateNodesToggle" text="Rotate?" />
                <TextField fx:id="rotationAmountTextField" promptText="Rotation amount" />
-         </children>
          <padding>
             <Insets bottom="20.0" top="20.0" />
          </padding>
