--- a/src/main/resources/main/controllers/hello-view.fxml
+++ b/src/main/resources/main/controllers/hello-view.fxml
@@ -34,13 +34,13 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/agpl-3.0.en.html>
   -->
 
-<StackPane fx:id="root" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" onMouseDragged="#moveZoomBoxWithMouse" onMousePressed="#createZoomBoxOnClick" onMouseReleased="#hideZoomBoxOnRelease" onScroll="#scrollHandler" styleClass="root" stylesheets="@../../image.Resources/styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.PhotoViewerController">
+<StackPane fx:id="root" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" onMouseDragged="#moveZoomBoxWithMouse" onMousePressed="#createZoomBoxOnClick" onMouseReleased="#hideZoomBoxOnRelease" onScroll="#scrollHandler" styleClass="root" stylesheets="@../../image.Resources/nordic.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.PhotoViewerController">
    <ToolBar fx:id="galleryThumbnailParentToolbar" onMouseEntered="#setVisibleToolbar" onMouseExited="#setTransparentToolbar" prefHeight="140.0" prefWidth="282.0" styleClass="scroll-ribbon" translateY="40.0" StackPane.alignment="TOP_CENTER">
          <ScrollPane fx:id="scrollPaneRootFileRibbon" fitToHeight="true" fitToWidth="true" styleClass="scroll">
                <HBox fx:id="thumbnailContainerRibbon" prefHeight="100.0" prefWidth="200.0" styleClass="scroll" />
          </ScrollPane>
       <StackPane.margin>
-         <Insets left="-10.0" right="-10.0" top="-6.0" />
+         <Insets left="-10.0" right="-10.0" top="-10.0" />
       </StackPane.margin>
    </ToolBar>
    <Label fx:id="metadataLabel" alignment="TOP_LEFT" onMouseClicked="#openGoogleMapsGPS" styleClass="root" StackPane.alignment="BOTTOM_LEFT">
@@ -52,6 +52,9 @@
       <effect>
          <Blend />
       </effect>
+      <StackPane.margin>
+         <Insets top="20.0" />
+      </StackPane.margin>
    </ImageView>
    <HBox alignment="CENTER" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
       <Button mnemonicParsing="false" onAction="#backButtonAction" onKeyPressed="#keyPressHandler" onKeyReleased="#keyReleasedHandler" opacity="0.5" text="&lt;">
